--- a/Sesión 14(28-10-2019)/css/estilos1.css
+++ b/Sesión 14(28-10-2019)/css/estilos1.css
@@ -2,3 +2,35 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.estilofuentenormal {
+    font-style: normal;
+}
+
+.estilofuenteitalic {
+    font-style: italic;
+}
+
+.estilofuenteoblique {
+    font-style: oblique;
+}
+
+.tamaniofuente {
+    font-size: 25px; /*Medida absoluta.*/
+}
+
+.tamaniofuente2 {
+    font-size: 1.5em; /*Medida relativa.*/
+}
+
+.anchoFuente {
+    font-weight: bold;
+}
+
+.fontVariant {
+    font-variant: small-caps;
+}
+
+.fontVariant1 {
+    font-variant: normal;
+}
+
