Versión 1.0 de la ramaSesion18: posicionamientos, opacidad y menus

--- a/Sesión 12(21-10-2019)/css/style1.css
+++ b/Sesión 12(21-10-2019)/css/style1.css
@@ -20,7 +20,7 @@
     border: solid black 1px;
     box-sizing: border-box;
     float: left;
-    overflow: auto;
+    overflow: auto; /*Para sacar el scroll*/
 }
 
 .capacentradaflotante {
