--- a/Sesión 15(04-11-2019)/css/estilos2.css
+++ b/Sesión 15(04-11-2019)/css/estilos2.css
@@ -8,12 +8,12 @@ div:hover p.ocultar {
     display: block; 
 }
 
-/*Pseudoclase first child*/
+/*Pseudoclase first-child*/
 div p:first-child {
     color: rosybrown;
 }
 
-/*Pseudoelemento first line*/
+/*Pseudoelemento first-line*/
 p.primeralinea::first-line {
     font-size: 2em; /*Medida relativa*/
 }
@@ -22,18 +22,18 @@ p.sangrado::first-line {
     text-indent: 2em;
 }
 
-/*Pseudoelemento first letter*/
+/*Pseudoelemento first-letter*/
 p.primeraletra::first-letter {
     font-family: 'Courier New', Courier, monospace;
     font-size: 2em;
 }
 
-/*Pseudo elemento Before. Introduce contenido delante de un elemento*/
+/*Pseudoelemento Before. Introduce contenido delante de un elemento*/
 h6::before {
     content: "Elemento - ";
 }
 
-/*Pseudo elemento After. Introduce contenido detrás de un elemento*/
+/*Pseudoelemento After. Introduce contenido detrás de un elemento*/
 h5::after {
     content: " es Cristian";
 }
